--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,8 @@
     <string name="music_player">音乐播放器</string>
     <string name="music_detail">音乐详情</string>
     <string name="exhibits">展品</string>
+    <string name="about_museum">关于科技馆</string>
+    <string name="volunteer_recruitment">志愿者招募</string>
+    <string name="visit_by_appointment">预约参观</string>
 
 </resources>
